Use the pynco package over nco (package rename in conda)

--- a/.travis.yml
+++ b/.travis.yml
@@ -36,6 +36,6 @@ install:
   # Customise the testing environment
   # ---------------------------------
   - conda install --channel ioos --file requirements.txt
-  - conda install --channel ioos nco pyncml pytest
+  - conda install --channel ioos nco pyncml pytest pynco
   - conda list --export
 script: py.test -v
