--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,6 @@
 language: python
 python:
   - "2.7"
-  - "3.3"
   - "3.4"
 
 sudo: false
@@ -36,9 +35,6 @@ install:
   # Customise the testing environment
   # ---------------------------------
   - conda install --channel ioos --file requirements.txt
-  - conda install --channel ioos nco pyncml pytest
-  - if [[ "$TRAVIS_PYTHON_VERSION" != "3.3" ]]; then
-      conda install --channel ioos pynco
-    fi
+  - conda install --channel ioos nco pyncml pytest pynco
   - conda list --export
 script: py.test -v
