--- a/conda-recipe/meta.yaml
+++ b/conda-recipe/meta.yaml
@@ -3,8 +3,7 @@ package:
     version: "1.2.5"
 
 source:
-    git_rev: 1.2.5
-    git_url: https://github.com/axiom-data-science/pyaxiom
+    path: ../
 
 build:
     number: 0
