--- a/.travis.yml
+++ b/.travis.yml
@@ -48,8 +48,8 @@ script:
 
 after_success:
   - if [ "$TRAVIS_PULL_REQUEST" == "false" ] && [ "$TRAVIS_TAG" != "" ]; then
-    conda install -n root conda-build anaconda-client
-    conda build conda-recipe --python $TRAVIS_PYTHON_VERSION
+    conda install -n root conda-build anaconda-client &&
+    conda build conda-recipe --python $TRAVIS_PYTHON_VERSION &&
     anaconda -t $ANACONDA_TOKEN upload --force -u axiom-data-science $HOME/miniconda/**/pyaxiom-*.tar.bz2;
     fi
 
